--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -9,14 +9,15 @@ on:
 jobs:
   build:
 
+
     runs-on: macos-latest
     strategy:
       matrix:
-        destination: ['macOS', 'iOS Simulator,name=iPhone 8', 'tvOS Simulator,name=Apple TV']
+        destination: ['macOS', 'iOS Simulator,name=iPhone 8']
         swift-version: [5.0]
 
     steps:
-    - uses: actions/checkout@master
+    - uses: actions/checkout@v2
     - name: Build
       run: |
         pod install
