--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -20,6 +20,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build
       run: |
+        cd Example/
         pod install
         set -o pipefail && xcodebuild clean build -workspace Longinus.xcworkspace -scheme Longinus-Example -destination "${destination}" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=NO
       env: 
