--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        destination: ['platform=iOS Simulator,OS=13.4,name=iPhone 8']
+        destination: ['platform:iOS Simulator, OS:13.6, name:iPhone 8', 'platform:macOS, arch:x86_64, variant:Mac Catalyst']
         swift-version: [5.0]
 
     steps:
