--- a/.gitignore
+++ b/.gitignore
@@ -36,4 +36,7 @@ Longinus.framework.zip
 # Note: if you ignore the Pods directory, make sure to uncomment
 # `pod install` in .travis.yml
 #
-# Pods/
+
+Pods/
+Podfile.lock
+
